# rudo

./: Cargo.toml
src/: app.rs  authentication.rs  error.rs  main.rs  rudoers.rs  user_info.rs
