[package]
name = "rudo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
fork = "0.1.22"
libc = "0.2.149"
pam = "0.7.0"
rpassword = "7.2.0"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"
unix_mode = "0.1.4"
users = "0.11.0"
which = "4.4.2"
